tools/rils-capi/include/rils.h

typedef uint64_t RilsHandle;
typedef struct RilsSlice {
    const uint8_t *data;
    size_t length;
} RilsSlice;
typedef struct RilsValue {
    uint32_t tag;
    uint32_t reserved;
    uint64_t low;
    uint64_t high;
} RilsValue;
typedef struct RilsHostParameter {
    RilsSlice logical_type;
    uint32_t transport_tag;
    uint32_t reserved;
} RilsHostParameter;
RILS_API int32_t rils_script_value_create_default(
    RilsHandle runtime,
    RilsHandle instance,
    RilsSlice target,
    RilsHandle *out_value);
RILS_API int32_t rils_script_value_destroy(RilsHandle runtime, RilsHandle value);
RILS_API int32_t rils_script_value_call_trait(
    RilsHandle runtime,
    RilsHandle instance,
    RilsHandle value,
    RilsSlice trait_name,
    RilsSlice method_name,
    const RilsValue *arguments,
    const RilsHostParameter *argument_types,
    size_t argument_count,
    RilsValue *out_value);
/* String handles are thread-bound. `RILS_VALUE_STRING` transfers ownership to the receiver. */
RILS_API int32_t rils_string_create(RilsSlice utf8, RilsHandle *out_string);
RILS_API int32_t rils_string_size(RilsHandle string, size_t *out_size);
RILS_API int32_t rils_string_write(
    RilsHandle string,
    uint8_t *buffer,
    size_t buffer_capacity,
    size_t *out_written);
RILS_API int32_t rils_string_destroy(RilsHandle string);
RILS_API int32_t rils_last_error_code(void);
RILS_API RilsSlice rils_last_error_message(void);
RILS_API RilsSlice rils_last_error_source_name(void);
RILS_API uint64_t rils_last_error_span_start(void);
RILS_API uint64_t rils_last_error_span_end(void);