tools/rils-capi/csharp/Rils.CSharp/Generated/NativeMethods.g.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_script_value_create_default")]
    internal static extern int ScriptValueCreateDefault(ulong @runtime, ulong @instance, NativeSlice @target, out ulong @out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_script_value_destroy")]
    internal static extern int ScriptValueDestroy(ulong @runtime, ulong @value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_script_value_call_trait")]
    internal static extern int ScriptValueCallTrait(ulong @runtime, ulong @instance, ulong @value, NativeSlice @trait_name, NativeSlice @method_name, NativeValue* @arguments, NativeHostParameter* @argument_types, UIntPtr @argument_count, out NativeValue @out_value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_string_create")]
    internal static extern int StringCreate(NativeSlice @utf8, out ulong @out_string);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_string_size")]
    internal static extern int StringSize(ulong @string, out UIntPtr @out_size);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_string_write")]
    internal static extern int StringWrite(ulong @string, byte* @buffer, UIntPtr @buffer_capacity, out UIntPtr @out_written);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_string_destroy")]
    internal static extern int StringDestroy(ulong @string);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_message")]
    internal static extern NativeSlice LastErrorMessage();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_source_name")]
    internal static extern NativeSlice LastErrorSourceName();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_span_start")]
    internal static extern ulong LastErrorSpanStart();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "rils_last_error_span_end")]
    internal static extern ulong LastErrorSpanEnd();
}
}
